# frame

./: .gitignore  .prettierignore  CHANGELOG.md  CHUNK_3_COMPLETION_REPORT.md  CHUNK_3_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.js  package.json  vite.config.js
.github/workflows/: publish.yml  test-build.yml  test-spatial-maker.yml
readme/: de-DE.md  es-ES.md  fr-FR.md  it-IT.md  ja-JP.md  ko-KR.md  ru-RU.md  zh-CN.md
scripts/: run.cjs  setup-ffmpeg.cjs  setup-upscaler.cjs
spatial-maker/: .gitignore  AUTOMATIC_CONVERSION.md  Cargo.toml  DOCUMENTATION_INDEX.md  EXAMPLE_OUTPUTS.md  FEATURE_COMPLETE.md  FORMAT_ENHANCEMENT_SUMMARY.md  IMAGE_FORMAT_SUPPORT.md  IMPLEMENTATION_SUMMARY.md  OUTPUT_FORMATS.md  QUICK_START.md  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_PACKAGE.md  RELEASE_SUMMARY.md  TESTING_COMPLETE.md  TEST_COMPLETION_REPORT.md  WHATS_NEW.md
spatial-maker/docs/: IMAGE_FORMATS.md  USAGE.md
spatial-maker/docs/development/: BUILD_VERIFICATION_REPORT.md  NATIVE_DECODING_PROPOSAL.md
spatial-maker/examples/: photo.rs
spatial-maker/src/: depth.rs  error.rs  image_loader.rs  lib.rs  model.rs  output.rs  stereo.rs
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: capabilities.rs  conversion.rs  dialog.rs  lib.rs  main.rs
src-tauri/src/conversion/: args.rs  codec.rs  commands.rs  error.rs  ffmpeg.rs  filters.rs  manager.rs  mod.rs  probe.rs  tests.rs  types.rs  upscale.rs  utils.rs  worker.rs
src-tauri/src/spatial/: commands.rs  error.rs  manager.rs  mod.rs  types.rs  worker.rs
src/lib/: types.ts
src/lib/components/: AppSettingsSheet.svelte  EmptySelection.svelte  EstimatedOutputPanel.svelte  FileItemRow.svelte  FileList.svelte  Header.svelte  LogsView.svelte  PreviewPanel.svelte  SettingsPanel.svelte  Titlebar.svelte  TrimModal.svelte
src/lib/components/file-list/: FileItemRow.svelte  (+1 more)
src/lib/features/: index.ts
src/lib/icons/: index.ts
src/lib/services/: capabilities.ts  config.ts  conversion.ts  dialog.ts  ffmpeg-log.tmLanguage.json  media.ts  notifications.ts  presets.ts  settings.ts  shiki.ts  spatial.ts  update.ts  video-compatibility.ts
src/lib/stores/: capabilities.svelte.ts  dialog.svelte.ts  theme.svelte.ts  update.svelte.ts
src/lib/utils/: bitrate.ts  crop.ts
src/routes/: +layout.svelte  +page.svelte  layout.css
static/: dialog-host.html
(+68 files in other folders)
