[package]
name = "spatial-maker"
version = "0.1.0"
edition = "2021"
authors = ["Frame Team"]
description = "Rust library for spatial photo/video generation using ONNX depth estimation"
license = "MIT"

[dependencies]
ort = { version = "2.0.0-rc.11", features = ["coreml"] }
image = "0.24"
ndarray = "0.15"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["stream"] }
futures-util = "0.3"
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"

[[example]]
name = "photo"
path = "examples/photo.rs"

[lib]
name = "spatial_maker"
path = "src/lib.rs"
